<resources>
    <string name="app_name">MultiScreenPager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">CloudConnectiv</string>


    <string name="menu_item_1">Settings</string>
    <string name="menu_item_2">list</string>
    <string name="server">Server</string>
    <string name="name">Name</string>
    <string name="status">Status</string>


    <string-array  name="tabs">
        <item value="tab_1">SSH Console</item>
        <item value="tab_2">CLI Express</item>
        <item value="tab_3">Tools</item>
        <item value="tab_4">Carrier Case</item>
        <item value="tab_5">TAC Case</item>
        <item value="tab_6">IM Pager</item>
        <item value="tab_7">Code Upgrade</item>

    </string-array >

    <string name="older">Older</string>
    <string name="serial">Serial</string>
    <string name="model">Model</string>
    <string name="tac_contact">TAC Contract</string>
    <string name="expires">Expires</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="countries_with_dial_codes">
      ewogICJjb250ZW50IjogWwogICAgewogICAgICAiaWQiOiAxLAogICAgICAibmFtZSI6ICJDSVNDTy1TZXJ2ZXIiLAogICAgICAiaXBBZGRyZXNzIjogIjEwLjEwLjEwLjEiLAogICAgICAiZGV2aWNlSVBTdWJuZXRNYXNrIjogIjI1NS4yNTUuMjU1LjEiLAogICAgICAibW9kZWwiOiB7CiAgICAgICAgImlkIjogMSwKICAgICAgICAibmFtZSI6ICIzMzUwIiwKICAgICAgICAiY3JlYXRpb25EYXRlIjogMTQ4NjU0OTkwNzAwMCwKICAgICAgICAiZXhwaXJ5RGF0ZSI6IG51bGwKICAgICAgfSwKICAgICAgImxvY2F0aW9uIjogewogICAgICAgICJpZCI6IDEsCiAgICAgICAgIm5hbWUiOiAiRGF0YS1DZW50ZXItQW1tYW4iLAogICAgICAgICJjaXR5IjogewogICAgICAgICAgImlkIjogMSwKICAgICAgICAgICJuYW1lIjogIkFtbWFuIiwKICAgICAgICAgICJjb3VudHJ5IjogewogICAgICAgICAgICAiaWQiOiAyLAogICAgICAgICAgICAibmFtZSI6ICJKb3JkYW4iCiAgICAgICAgICB9CiAgICAgICAgfSwKICAgICAgICAibGF0aXR1ZGUiOiAzMS45NDUzNjcsCiAgICAgICAgImxvbmdpdHVkZSI6IDM1LjkyODM3MgogICAgICB9LAogICAgICAic3RhdHVzIjogewogICAgICAgICJpZCI6IDEsCiAgICAgICAgInN0YXR1c1ZhbHVlIjogInN0YWJsZSIsCiAgICAgICAgImRhbmdlckxldmVsIjogewogICAgICAgICAgImlkIjogMSwKICAgICAgICAgICJkYW5nZXJMZXZlbE5hbWUiOiAibG93IiwKICAgICAgICAgICJkYW5nZXJMZXZlbEludFZhbHVlIjogMCwKICAgICAgICAgICJhY3Rpb25SZXF1aXJlZCI6IGZhbHNlCiAgICAgICAgfQogICAgICB9LAogICAgICAidHlwZSI6IHsKICAgICAgICAiaWQiOiAxLAogICAgICAgICJtYWNoaW5lVHlwZU5hbWUiOiAiUk9VVEVSIgogICAgICB9LAogICAgICAic2VyaWFsTnVtIjogbnVsbAogICAgfSwKICAgIHsKICAgICAgImlkIjogMiwKICAgICAgIm5hbWUiOiAiT3BlbkdlYXIiLAogICAgICAiaXBBZGRyZXNzIjogIjEwLjEwLjEwLjIiLAogICAgICAiZGV2aWNlSVBTdWJuZXRNYXNrIjogIjI1NS4yNTUuMjU1LjAiLAogICAgICAibW9kZWwiOiB7CiAgICAgICAgImlkIjogMiwKICAgICAgICAibmFtZSI6ICJvcGVuZ2VhciAyMDE2IiwKICAgICAgICAiY3JlYXRpb25EYXRlIjogMTQ4NjQ5MDQwMDAwMCwKICAgICAgICAiZXhwaXJ5RGF0ZSI6IG51bGwKICAgICAgfSwKICAgICAgImxvY2F0aW9uIjogewogICAgICAgICJpZCI6IDIsCiAgICAgICAgIm5hbWUiOiAiRGF0YS1DZW50ZXItTlkiLAogICAgICAgICJjaXR5IjogewogICAgICAgICAgImlkIjogMiwKICAgICAgICAgICJuYW1lIjogIk5ld1lvcmsiLAogICAgICAgICAgImNvdW50cnkiOiB7CiAgICAgICAgICAgICJpZCI6IDEsCiAgICAgICAgICAgICJuYW1lIjogIlVTIgogICAgICAgICAgfQogICAgICAgIH0sCiAgICAgICAgImxhdGl0dWRlIjogNDAuOTE5NzM5LAogICAgICAgICJsb25naXR1ZGUiOiAtNzQuOTk4MTY5CiAgICAgIH0sCiAgICAgICJzdGF0dXMiOiB7CiAgICAgICAgImlkIjogMywKICAgICAgICAic3RhdHVzVmFsdWUiOiAiaXMgYWJvdXQgdG8gZ28gZG93biIsCiAgICAgICAgImRhbmdlckxldmVsIjogewogICAgICAgICAgImlkIjogMywKICAgICAgICAgICJkYW5nZXJMZXZlbE5hbWUiOiAiaGlnaCIsCiAgICAgICAgICAiZGFuZ2VyTGV2ZWxJbnRWYWx1ZSI6IDIsCiAgICAgICAgICAiYWN0aW9uUmVxdWlyZWQiOiB0cnVlCiAgICAgICAgfQogICAgICB9LAogICAgICAidHlwZSI6IHsKICAgICAgICAiaWQiOiAyLAogICAgICAgICJtYWNoaW5lVHlwZU5hbWUiOiAiU1dJVENIIgogICAgICB9LAogICAgICAic2VyaWFsTnVtIjogbnVsbAogICAgfSwKICAgIHsKICAgICAgImlkIjogMywKICAgICAgIm5hbWUiOiAiQ0lTQ08tU2VydmVyIiwKICAgICAgImlwQWRkcmVzcyI6ICIxMC4xMC4xMC4zIiwKICAgICAgImRldmljZUlQU3VibmV0TWFzayI6ICIyNTUuMjU1LjI1NS4wIiwKICAgICAgIm1vZGVsIjogewogICAgICAgICJpZCI6IDEsCiAgICAgICAgIm5hbWUiOiAiMzM1MCIsCiAgICAgICAgImNyZWF0aW9uRGF0ZSI6IDE0ODY1NDk5MDcwMDAsCiAgICAgICAgImV4cGlyeURhdGUiOiBudWxsCiAgICAgIH0sCiAgICAgICJsb2NhdGlvbiI6IHsKICAgICAgICAiaWQiOiAzLAogICAgICAgICJuYW1lIjogIkRhdGEtQ2VudGVyLUtyYWtvdyIsCiAgICAgICAgImNpdHkiOiB7CiAgICAgICAgICAiaWQiOiAzLAogICAgICAgICAgIm5hbWUiOiAiS3Jha293IiwKICAgICAgICAgICJjb3VudHJ5IjogewogICAgICAgICAgICAiaWQiOiA0LAogICAgICAgICAgICAibmFtZSI6ICJQb2xhbmQiCiAgICAgICAgICB9CiAgICAgICAgfSwKICAgICAgICAibGF0aXR1ZGUiOiA1MC4wNjQ2NSwKICAgICAgICAibG9uZ2l0dWRlIjogMTkuOTQ0OTgKICAgICAgfSwKICAgICAgInN0YXR1cyI6IHsKICAgICAgICAiaWQiOiAyLAogICAgICAgICJzdGF0dXNWYWx1ZSI6ICJpcyBoYXZpbmcgYSBwcm9ibGVtIiwKICAgICAgICAiZGFuZ2VyTGV2ZWwiOiB7CiAgICAgICAgICAiaWQiOiAyLAogICAgICAgICAgImRhbmdlckxldmVsTmFtZSI6ICJtaW5vciIsCiAgICAgICAgICAiZGFuZ2VyTGV2ZWxJbnRWYWx1ZSI6IDEsCiAgICAgICAgICAiYWN0aW9uUmVxdWlyZWQiOiBmYWxzZQogICAgICAgIH0KICAgICAgfSwKICAgICAgInR5cGUiOiBudWxsLAogICAgICAic2VyaWFsTnVtIjogbnVsbAogICAgfSwKICAgIHsKICAgICAgImlkIjogNCwKICAgICAgIm5hbWUiOiAiQ0lTQ08tU2VydmVyIiwKICAgICAgImlwQWRkcmVzcyI6ICIxMC4xMC4xMC40IiwKICAgICAgImRldmljZUlQU3VibmV0TWFzayI6ICIyNTUuMjU1LjI1NS4wIiwKICAgICAgIm1vZGVsIjogewogICAgICAgICJpZCI6IDEsCiAgICAgICAgIm5hbWUiOiAiMzM1MCIsCiAgICAgICAgImNyZWF0aW9uRGF0ZSI6IDE0ODY1NDk5MDcwMDAsCiAgICAgICAgImV4cGlyeURhdGUiOiBudWxsCiAgICAgIH0sCiAgICAgICJsb2NhdGlvbiI6IHsKICAgICAgICAiaWQiOiA0LAogICAgICAgICJuYW1lIjogIkRhdGEtQ2VudGVyLUxvbmRvbiIsCiAgICAgICAgImNpdHkiOiB7CiAgICAgICAgICAiaWQiOiA0LAogICAgICAgICAgIm5hbWUiOiAiTG9uZG9uIiwKICAgICAgICAgICJjb3VudHJ5IjogewogICAgICAgICAgICAiaWQiOiAzLAogICAgICAgICAgICAibmFtZSI6ICJVSyIKICAgICAgICAgIH0KICAgICAgICB9LAogICAgICAgICJsYXRpdHVkZSI6IDUxLjUwNzM1MSwKICAgICAgICAibG9uZ2l0dWRlIjogLTAuMTI3NzU4CiAgICAgIH0sCiAgICAgICJzdGF0dXMiOiB7CiAgICAgICAgImlkIjogNCwKICAgICAgICAic3RhdHVzVmFsdWUiOiAiZG93biIsCiAgICAgICAgImRhbmdlckxldmVsIjogewogICAgICAgICAgImlkIjogNCwKICAgICAgICAgICJkYW5nZXJMZXZlbE5hbWUiOiAidXJnZW50IiwKICAgICAgICAgICJkYW5nZXJMZXZlbEludFZhbHVlIjogMywKICAgICAgICAgICJhY3Rpb25SZXF1aXJlZCI6IHRydWUKICAgICAgICB9CiAgICAgIH0sCiAgICAgICJ0eXBlIjogbnVsbCwKICAgICAgInNlcmlhbE51bSI6IG51bGwKICAgIH0KICBdLAogICJ0b3RhbFBhZ2VzIjogMSwKICAidG90YWxFbGVtZW50cyI6IDQsCiAgImxhc3QiOiB0cnVlLAogICJudW1iZXJPZkVsZW1lbnRzIjogNCwKICAic29ydCI6IG51bGwsCiAgImZpcnN0IjogdHJ1ZSwKICAic2l6ZSI6IDEwLAogICJudW1iZXIiOiAwCn0=
    </string>

</resources>
