<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/parentViewCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="6"
        android:background="@android:color/white"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/issueImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/items_padding"
            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/items_padding"
            android:layout_marginLeft="@dimen/items_padding"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
            android:textSize="@dimen/normal_font_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding_small"
                android:text="@string/serial"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/serialNoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/normal_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding_small"
                android:text="@string/model"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/modelNoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/normal_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding_small"
                android:text="@string/tac_contact"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/tacContactTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/normal_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/items_padding_small"
                android:text="@string/expires"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/expiresTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/items_padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/normal_font_size" />
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/items_padding"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/lightest_gray" />
        <TextView

            android:id="@+id/statusTxt"
            android:layout_width="@dimen/max_text_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items_padding"
            android:layout_marginRight="@dimen/items_padding_small"
            android:text="title"
            android:textAllCaps="true"
            android:textSize="@dimen/normal_font_size" />

        <ImageView
            android:id="@+id/statusImg"
            android:layout_width="@dimen/status_image"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/status_image"
            android:src="@drawable/ic_donut_small"
            android:tint="@color/green_status" />
    </LinearLayout>
</RelativeLayout>